1999-10-13  Tim Jenness  <timj@jach.hawaii.edu>

	* Convert.pm (hds2ndf): Add routine for HDS to NDF conversion.

1999-09-22  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/JCMT.pm (findrecipe): Support phot-pixel jiggle maps

1999-09-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/Michelle.pm: Add initialisation of format and rawformat.

	* Frame/UFTI.pm: Add initialisation of format and rawformat.

	* Frame/CGS4.pm: Add file_from_bits and flag_from_bits. Add
	initialisation of format and rawformat.

	* Frame/IRCAM.pm (file_from_bits): Add from base class. Add
	initialisation of format and rawformat.

	* Frame/JCMT.pm: Add initialisation of format and rawformat.

	* Frame.pm: flag_from_bits is now an abstract method.

	* Frame/CGS4.pm (file_from_bits): Add file_from_bits and
	flag_from_bits from IRCAM.

	* Loop.pm (link_and_read): Read conversion systems from Frame objects.

	* Frame/UFTI.pm (flag_from_bits): move from base class.

	* Convert.pm: Rename to UKIRTio2hds. Add conversion call.

	* Frame.pm (rawformat): Add rawformat()

1999-09-17  Tim Jenness  <timj@jach.hawaii.edu>

	* Convert.pm (UKIRTmultindf2hds): Implement UKIRTmultindf2hds
	method. Change whole module to use File::Spec and File::Basename.

1999-09-15  Tim Jenness  <timj@jach.hawaii.edu>

	* Convert.pm: Tidy up documentation. 

1999-09-14  Tim Jenness  <timj@jach.hawaii.edu>

	* Print.pm (err): Allow beeping with orac_err

	* Basic.pm: Add $Beep global variable

1999-09-13  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm (send_to_gaia): Change zautoscale to 95%

1999-09-03  Tim Jenness  <timj@jach.hawaii.edu>

	* TempFile.pm: Allow for File::MkTemp not being available. 

	* Display/GAIA.pm (configure): Tweak to work with new Gaia (.gaia
	rather than .rtd).

1999-08-31  Tim Jenness  <timj@jach.hawaii.edu>

	* TempFile.pm: KLUGE use of File::MkTemp rather than POSIX tmpnam.

1999-08-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Group/UKIRT.pm: add calc_orac_headers 
