@@ -1,3 +1,7 @@
+1999-10-22  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Calib/SCUBA.pm (gain): Reset FILTER keyword after gain search.
+
 1999-10-13  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Convert.pm (hds2ndf): Add routine for HDS to NDF conversion.
